--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -12,10 +12,13 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('user.login') }}">Логин</a>
-
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('plan.media_plans') }}">Медиапланы</a>
+            </li>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
     </div>
 </nav>
