--- a/app/templates/plans/create_media_plan.html
+++ b/app/templates/plans/create_media_plan.html
@@ -1,20 +1,30 @@
 {% extends "base.html" %}
+{% block title %}Создание медиаплана{% endblock %}
+{% block page_title %}{% endblock %}
 {% block content %}
-<div class="row">
-    <div class="col-8">
-        <h2>Создание медиаплана</h2>
+<div class="row mt-4">
+    <div class="col-6 offset-3">
+        <h2 class="mb-4">Создание медиаплана</h2>
         <form method="POST">
             {{ form.hidden_tag() }}
-            <div class="form-group">
-                {{ form.name.label }}
-                {{ form.name(class="form-control") }}
+            <div class="form-group mb-3">
+                {{ form.name.label(class="form-label") }}
+                {{ form.name(class="form-control form-control-sm") }}
             </div>
-            <div class="form-group">
-                {{ form.description.label }}
-                {{ form.description(class="form-control") }}
+            <div class="form-group mb-3">
+                {{ form.source.label(class="form-label") }}
+                {{ form.source(class="form-select form-select-sm") }}
             </div>
-            <div class="form-group">
-                {{ form.submit(class="btn btn-primary") }}
+            <div class="form-group mb-3">
+                {{ form.budget.label(class="form-label") }}
+                {{ form.budget(class="form-control form-control-sm") }}
+            </div>
+            <div class="form-group mb-3">
+                {{ form.description.label(class="form-label") }}
+                {{ form.description(class="form-control form-control-sm") }}
+            </div>
+            <div class="form-group mt-4">
+                {{ form.submit(class="btn btn-primary btn-block") }}
             </div>
         </form>
     </div>
