--- a/app/templates/user/registration.html
+++ b/app/templates/user/registration.html
@@ -2,22 +2,26 @@
 {% block content %}
 <div class="row mt-4">
     <div class="col-4">
-        <form action="{{ url_for('user.process_login') }}" method="POST">
+        <form action="{{ url_for('user.process_reg') }}" method="POST">
             {{ form.hidden_tag() }}
             <div class="form-group mb-3">
                 {{ form.user_name.label(class="form-label") }}
                 {{ form.user_name(class="form-control") }}
             </div>
             <div class="form-group mb-3">
+                {{ form.email.label(class="form-label") }}
+                {{ form.email(class="form-control") }}
+            </div>
+            <div class="form-group mb-3">
                 {{ form.password.label(class="form-label") }}
                 {{ form.password(class="form-control") }}
             </div>
-            <div class="form-group form-check mb-3">
-                {{ form.remember_me(class="form-check-input") }}
-                {{ form.remember_me.label(class="form-check-label") }}
+            <div class="form-group mb-3">
+                {{ form.password2.label(class="form-label") }}
+                {{ form.password2(class="form-control") }}
             </div>
-            <div class="form-group">
-                {{ form.submit(class="btn btn-primary") }}
+            <div class="form-group mt-4">
+                {{ form.submit(class="btn btn-primary btn-block") }}
             </div>
         </form>
     </div>
