--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -1,3 +1,50 @@
 {% extends "base.html" %}
 
-{% block content %}Админка{% endblock %}
+{% block content %}
+<div class="row mt-4">
+    <div class="col-10 offset-1">
+        <h2 class="mb-4">Админка</h2>
+        <h3 class="mb-3">Статистика по медиапланам</h3>
+
+        <div class="mt-4">
+            <h4>Источники</h4>
+            <table class="table table-striped table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Источник</th>
+                        <th>Количество медиапланов</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for source, count in source_stats %}
+                    <tr>
+                        <td>{{ source }}</td>
+                        <td>{{ count }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+        <div class="mt-4">
+            <h4>Суммы бюджетов</h4>
+            <table class="table table-striped table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Источник</th>
+                        <th>Сумма бюджета</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for source, budget in budget_stats %}
+                    <tr>
+                        <td>{{ source }}</td>
+                        <td>{{ budget }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+{% endblock %}
