--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -6,9 +6,11 @@
         {% if messages %}
         <div>
             {% for category, message in messages %}
-            <div class="alert alert-{{ category }}" role="alert">
+            {% if category in ['success', 'login_error'] %}
+            <div class="alert alert-{{ 'danger' if category == 'login_error' else category }}" role="alert">
                 {{ message }}
             </div>
+            {% endif %}
             {% endfor %}
         </div>
         {% endif %}
