--- a/app/templates/user/registration.html
+++ b/app/templates/user/registration.html
@@ -1,7 +1,19 @@
 {% extends "base.html" %}
+
 {% block content %}
 <div class="row mt-4">
     <div class="col-4">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        <div>
+            {% for category, message in messages %}
+            <div class="alert alert-{{ category }}" role="alert">
+                {{ message }}<br>
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
+        {% endwith %}
         <form action="{{ url_for('user.process_reg') }}" method="POST">
             {{ form.hidden_tag() }}
             <div class="form-group mb-3">
