--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -27,7 +27,7 @@
                 </li>
                 {% if current_user.is_admin %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('admin.admin_index') }}">Админка</a>
+                    <a class="nav-link" href="{{ url_for('admin.manage_users') }}">Админка</a>
                 </li>
                 {% endif %}
                 <li class="nav-item">
